game control as a joystick

--- a/index.html
+++ b/index.html
@@ -12,19 +12,8 @@
         <div class="game-best-score invisible">Best: <span>0</span></div>
       </div>
       <canvas id="display" height="300" width="300"></canvas>
-      <div class="control-butons">
-        <button data-dir="ArrowUp">
-          <img src="./dist/arrow-up.svg" alt="Up" />
-        </button>
-        <button data-dir="ArrowRight">
-          <img src="./dist/arrow-up.svg" alt="Up" />
-        </button>
-        <button data-dir="ArrowLeft">
-          <img src="./dist/arrow-up.svg" alt="Up" />
-        </button>
-        <button data-dir="ArrowDown">
-          <img src="./dist/arrow-up.svg" alt="Up" />
-        </button>
+      <div class="control-buttons">
+        <div class="control-button"></div>
       </div>
       <div class="game-modal modal-instructions">
         <div class="game-modal-body">
