vibrate when execute some actions

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="game-best-score invisible">Best: <span>0</span></div>
       </div>
       <canvas id="display" height="300" width="300"></canvas>
+      <div class="game-btn">
+        <button class="game-sound"></button>
+        <!-- <button class="game-control"></button> -->
+      </div>
       <div class="control-buttons">
         <div class="control-button"></div>
       </div>
