--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </div>
+    <script>var expPaterns = {};</script>
     <script src="./dist/js/bundle.js"></script>
   </body>
 </html>
